# go-oauth-pkce-demo

./: .env.example  .gitignore  README.md  go.mod
cmd/pkcedemo/: main.go
internal/oauth/: client.go  config.go  local_callback.go  manager.go  pkce.go  store.go
pkce-codex-rs/: Cargo.toml
pkce-codex-rs/src/: lib.rs  main.rs
pkce-codex-rs/src/oauth/: callback.rs  client.rs  config.rs  manager.rs  mod.rs  pkce.rs  store.rs
