[package]
name = "pkce-codex-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
reqwest = { version = "0.13.2", features = ["json", "form"] }
anyhow = "1.0"
axum = { version = "0.8.8", features = ["ws", "tokio", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.0"
base64 = "0.22.1"
sha2 = "0.10"
url = "2.5.8"
chrono = "0.4.44"
jwt = "0.16.0"
tokio = { version = "1.51.1", features = ["rt-multi-thread"] }
webbrowser = "1.2.0"
tempfile = "3.23.0"
